tests/invalid/Lifetime_Invalid_2.whiley
public export method test():
    &this:int x = this:new 1
    myblock:
        x = myblock:new 1
